# better-image-naming

./: CLAUDE.md  README.md  main.py  pyproject.toml
imgname/: __init__.py
spec/: initial_spec.md
